--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <h1>Adam's Student Home Page</h1>
-<a href="#">GitHub Pages</a> | 
-<a href="#">mDrive</a> | 
-<a href="#">CSIS server</a> 
+<a href="pokeygreencactus.github.io">GitHub Pages</a> | 
+<a href="vdrive.svsu.edu">mDrive</a> | 
+<a href="csis.svsu.edu">CSIS server</a> 
 <br />
 <br />
 <h2>Assignments</h2>
