--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1>Adam's Student Home Page</h1>
 <a href="pokeygreencactus.github.io">GitHub Pages</a> | 
-<a href="vdrive.svsu.edu">mDrive</a> | 
+<a href="svsu.edu/~racossin">mDrive</a> | 
 <a href="csis.svsu.edu">CSIS server</a> 
 <br />
 <br />
