--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1>Adam's Student Home Page</h1>
 <a href="pokeygreencactus.github.io">GitHub Pages</a> | 
-<a href="https://vdrive.svsu.edu/htcomnet/Handlers/Download.ashx?action=download&file=Home%20Folder%2Fpublic_html%2Fpokeygreencactus.github.io.html">mDrive</a> | 
+<a href="webp.svsu.edu/~racossin/public_html/index.html">mDrive</a> | 
 <a href="https://csis.svsu.edu/~racossin/">CSIS server</a> 
 <br />
 <br />
