--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1>Adam's Student Home Page</h1>
 <a href="pokeygreencactus.github.io">GitHub Pages</a> | 
-<a href="https://webp.svsu.edu/~racossin/public_html/index.html">mDrive</a> | 
+<a href="https://webp.svsu.edu/~racossin/index.html">mDrive</a> | 
 <a href="http://webp.svsu.edu/~racossin/">CSIS server</a> 
 <br />
 <br />
