--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -1,9 +1,9 @@
 &lt;!doctype html&gt;
 &lt;html lang=&quot;en&quot;&gt;
 &lt;head&gt;
-&lt;title&gt;Minimial HTML&lt;/title&gt;
+&lt;title&gt;Code Tag Example&lt;/title&gt;
 &lt;/head&gt;
 &lt;body&gt;
-&lt;p&gt;Hello, world&lt;/p&gt;
+&lt;p&gt;The word &lt;code&gt;code&lt;/code&gt; is in the code tag&lt;/p&gt;
 &lt;/body&gt;
 &lt;/html&gt;
