--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -7,3 +7,11 @@
 &lt;p&gt;The word &lt;code&gt;code&lt;/code&gt; is in the code tag&lt;/p&gt;
 &lt;/body&gt;
 &lt;/html&gt;
+
+
+<form>
+  <label for="fname">First name:</label><br>
+  <input type="text" id="fname" name="fname"><br>
+  <label for="lname">Last name:</label><br>
+  <input type="text" id="lname" name="lname">
+</form> 
