--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -9,89 +9,43 @@
 &lt;/html&gt;
 
 
-&lt;!DOCTYPE html&gt;
-&lt;html&gt;
-&lt;body&gt;
+<!DOCTYPE html>
+<html>
+<body>
 
-&lt;h2&gt;Text input fields&lt;/h2&gt;
+<h2>Text input fields</h2>
 
-&lt;form&gt;
-  &lt;label for=&quot;fname&quot;&gt;First name:&lt;/label&gt;&lt;br&gt;
-  &lt;input type=&quot;text&quot; id=&quot;fname&quot; name=&quot;fname&quot; value=&quot;John&quot;&gt;&lt;br&gt;
-  &lt;label for=&quot;lname&quot;&gt;Last name:&lt;/label&gt;&lt;br&gt;
-  &lt;input type=&quot;text&quot; id=&quot;lname&quot; name=&quot;lname&quot; value=&quot;Doe&quot;&gt;
-&lt;/form&gt;
+<form>
+  <label for="fname">First name:</label><br>
+  <input type="text" id="fname" name="fname" value="John"><br>
+  <label for="lname">Last name:</label><br>
+  <input type="text" id="lname" name="lname" value="Doe">
+</form>
 
-&lt;p&gt;Note that the form itself is not visible.&lt;/p&gt;
+<p>Note that the form itself is not visible.</p>
 
-&lt;p&gt;Also note that the default width of text input fields is 20 characters.&lt;/p&gt;
+<p>Also note that the default width of text input fields is 20 characters.</p>
 
-&lt;/body&gt;
-&lt;/html&gt;
+</body>
+</html>
 
 
-&lt;!DOCTYPE html&gt;
-&lt;html&gt;
-&lt;head&gt;
-&lt;style&gt;
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
-}
+<!DOCTYPE html>
+<html>
+<body>
 
-td, th {
-  border: 1px solid #dddddd;
-  text-align: left;
-  padding: 8px;
-}
+<h2>Text input fields</h2>
 
-tr:nth-child(even) {
-  background-color: #dddddd;
-}
-&lt;/style&gt;
-&lt;/head&gt;
-&lt;body&gt;
+<form>
+  <label for="fname">First name:</label><br>
+  <input type="text" id="fname" name="fname" value="John"><br>
+  <label for="lname">Last name:</label><br>
+  <input type="text" id="lname" name="lname" value="Doe">
+</form>
 
-&lt;h2&gt;HTML Table&lt;/h2&gt;
+<p>Note that the form itself is not visible.</p>
 
-&lt;table&gt;
-  &lt;tr&gt;
-    &lt;th&gt;Company&lt;/th&gt;
-    &lt;th&gt;Contact&lt;/th&gt;
-    &lt;th&gt;Country&lt;/th&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-    &lt;td&gt;Alfreds Futterkiste&lt;/td&gt;
-    &lt;td&gt;Maria Anders&lt;/td&gt;
-    &lt;td&gt;Germany&lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-    &lt;td&gt;Centro comercial Moctezuma&lt;/td&gt;
-    &lt;td&gt;Francisco Chang&lt;/td&gt;
-    &lt;td&gt;Mexico&lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-    &lt;td&gt;Ernst Handel&lt;/td&gt;
-    &lt;td&gt;Roland Mendel&lt;/td&gt;
-    &lt;td&gt;Austria&lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-    &lt;td&gt;Island Trading&lt;/td&gt;
-    &lt;td&gt;Helen Bennett&lt;/td&gt;
-    &lt;td&gt;UK&lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-    &lt;td&gt;Laughing Bacchus Winecellars&lt;/td&gt;
-    &lt;td&gt;Yoshi Tannamuri&lt;/td&gt;
-    &lt;td&gt;Canada&lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-    &lt;td&gt;Magazzini Alimentari Riuniti&lt;/td&gt;
-    &lt;td&gt;Giovanni Rovelli&lt;/td&gt;
-    &lt;td&gt;Italy&lt;/td&gt;
-  &lt;/tr&gt;
-&lt;/table&gt;
+<p>Also note that the default width of text input fields is 20 characters.</p>
 
-&lt;/body&gt;
-&lt;/html&gt;
+</body>
+</html>
