--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -1,12 +1,12 @@
-&lt;!doctype html&gt;
-&lt;html lang=&quot;en&quot;&gt;
-&lt;head&gt;
-&lt;title&gt;Code Tag Example&lt;/title&gt;
-&lt;/head&gt;
-&lt;body&gt;
-&lt;p&gt;The word &lt;code&gt;code&lt;/code&gt; is in the code tag&lt;/p&gt;
-&lt;/body&gt;
-&lt;/html&gt;
+<!doctype html>
+<html lang="en">
+<head>
+<title>Code Tag Example</title>
+</head>
+<body>
+<p>The word <code>code</code> is in the code tag</p>
+</body>
+</html>
 
 
 <!DOCTYPE html>
