--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -1,10 +1,11 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-<title>Code Tag Example</title>
+<title>Assignment 1</title>
 </head>
 <body>
-<p>The word <code>code</code> is in the code tag</p>
+  <h2>Code tag example</h2>
+  <p>The word <code>code</code> is in the code tag</p>
 </body>
 </html>
 
