--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -4,7 +4,7 @@
 <title>Assignment 1</title>
 </head>
 <body>
-  <h2>Code tag example</h2>
+  <h2>Code Tag Example</h2>
   <p>The word <code>code</code> is in the code tag</p>
 </body>
 </html>
@@ -14,7 +14,7 @@
 <html>
 <body>
 
-<h2>Text input fields</h2>
+<h2>First and Last Name Form</h2>
 
 <form>
   <label for="fname">First name:</label><br>
