--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -14,7 +14,7 @@
 <html>
 <body>
 
-<h2>First and Last Name Form</h2>
+<h2>Form Example</h2>
 
 <form>
   <label for="fname">First name:</label><br>
