--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -28,7 +28,7 @@ table, th, td {
 
 <h2>HTML Table Example</h2>
 
-<table style="width:100%">
+<table style="width:50%">
   <tr>
     <th>Name</th>
     <th>Date of Birth</th>
@@ -43,6 +43,11 @@ table, th, td {
     <td>Maria Hernandez</td>
     <td>12/15/1986</td>
     <td>Mexico</td>
+  </tr>
+  <tr>
+    <td>Cho Kim</td>
+    <td>09/06/1970</td>
+    <td>South Korea</td>
   </tr>
 </table>
 
