--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -19,7 +19,7 @@
 </form>
 
   
-
+<!the html validator tells me that style cannot be a child of the body element, but I'm not really sure how else I would do this/!>
 <style>
 table, th, td {
   border:1px solid black;
