--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -20,7 +20,7 @@
 
   
   
-<!the html validator tells me that style cannot be a child of the body element, but I'm not really sure how else I would do this>
+<!--the html validator tells me that style cannot be a child of the body element, but I'm not really sure how else I would do this-->
 <style>
 table, th, td {
   border:1px solid black;
