--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -15,7 +15,9 @@
   <label for="fname">First name:</label><br>
   <input type="text" id="fname" name="fname" value="John"><br>
   <label for="lname">Last name:</label><br>
-  <input type="text" id="lname" name="lname" value="Doe">
+  <input type="text" id="lname" name="lname" value="Doe"><br>
+  <label for="dob">Date of birth:</label><br>
+  <input type="text" id="dob" name="dob" value="08/25/1990"><br>                                          
 </form>
 
   
