--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -1,28 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<title>CSS Template</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Style the header */
+header {
+  background-color: #666;
+  padding: 30px;
+  text-align: center;
+  font-size: 25px;
+  color: white;
+}
+
+/* Create two columns/boxes that floats next to each other */
+nav {
+  float: left;
+  width: 50%;
+  height: 300px; /* only for demonstration, should be removed */
+  background: #ccc;
+  padding: 20px;
+}
+
+/* Style the list inside the menu */
+nav ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+article {
+  float: left;
+  padding: 20px;
+  width: 50%;
+  background-color: #f1f1f1;
+  height: 300px; /* only for demonstration, should be removed */
+}
+
+/* Clear floats after the columns */
+section::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Style the footer */
+footer {
+  background-color: #777;
+  padding: 20px;
+  text-align: center;
+  color: white;
+}
+
+/* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
+@media (max-width: 600px) {
+  nav, article {
+    width: 100%;
+    height: auto;
+  }
+}
+</style>
+</head>
+<body>
+
+<header>
+  <h2>The Assigment 1 Times</h2>
+</header>
+
+<section>
+  <nav>
+    <ul>
+      <li>
+      <head>
   <title>Assignment 1</title>
 </head>
 <body>
   <h2>Code Tag Example</h2>
-  <p>The word <code>code</code> is in the code tag</p>
+  <p><code>This is an example of using the code tag in HTML.</code></p>
 
+      </li>
+    </ul>
+  </nav>
   
-
-<h2>Form Example</h2>
-
-<form>
-  <label for="fname">First name:</label><br>
-  <input type="text" id="fname" name="fname" value="John"><br>
-  <label for="lname">Last name:</label><br>
-  <input type="text" id="lname" name="lname" value="Doe"><br>
-  <label for="dob">Date of birth:</label><br>
-  <input type="text" id="dob" name="dob" value="08/25/1990"><br>                                          
-</form>
-
-  
-  
-<!--the html validator tells me that style cannot be a child of the body element, but I'm not really sure how else I would do this-->
+  <article>
+    <!the html validator tells me that style cannot be a child of the body element, but I'm not really sure how else I would do this/!>
 <style>
 table, th, td {
   border:1px solid black;
@@ -53,6 +122,27 @@ table, th, td {
     <td>South Korea</td>
   </tr>
 </table>
+
+  </article>
+</section>
+
+<article>
+<h2>Form Example</h2>
+
+<form>
+  <label for="fname">First name:</label><br>
+  <input type="text" id="fname" name="fname" value="John"><br>
+  <label for="lname">Last name:</label><br>
+  <input type="text" id="lname" name="lname" value="Doe"><br>
+  <label for="dob">Date of birth:</label><br>
+  <input type="text" id="dob" name="dob" value="08/25/1990"><br>
+</form>
+</article>
+
+<footer>
+  <p>This is an example of an image</p>
+   <img src="https://via.placeholder.com/206" />
+</footer>
 
 </body>
 </html>
