--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -141,7 +141,7 @@ table, th, td {
 
 <footer>
   <p>This is an example of an image</p>
-   <img src="https://via.placeholder.com/206" />
+   <img src="https://via.placeholder.com/700x206" />
 </footer>
 
 </body>
