--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -76,6 +76,7 @@ footer {
 </header>
 
 <section>
+  <h2>By: Adam Cossin</h2>
   <nav>
     <ul>
       <li>
@@ -141,6 +142,7 @@ table, th, td {
 
 <footer>
   <p>This is an example of an image</p>
+  <!--html validator advises I use an 'alt atribute' for images-->
    <img src="https://via.placeholder.com/700x206" />
 </footer>
 
