--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
+<!--Assignment 1 by Adam Cossin, worked with creating forms and tables in HTML, as well as some visual editing (using tables)-->
 <html lang="en">
 <head>
 <title>Assignment 1</title>
-<meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 * {
@@ -78,12 +78,10 @@ footer {
 <section>
   <h2>By: Adam Cossin</h2>
   <nav>
-    <ul>
   <title>Assignment 1</title>
 
   <h2>Code Tag Example</h2>
   <p><code>This is an example of using the code tag in HTML.</code></p>
-    </ul>
   </nav>
   
   <article>
