--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -77,6 +77,7 @@ footer {
 
 <section>
   <h2>By: Adam Cossin</h2>
+  <!--the HTML validator says that title is not allowed as a child of nav, but I'm unsure why-->
   <nav>
   <title>Assignment 1</title>
 
