--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <br />
 <h2>Assignments</h2>
 <a href="https://pokeygreencactus.github.io/assignments/assignment01">Assignment 01</a><br />
-<a href="#">Assignment 02</a><br />
+<a href="https://pokeygreencactus.github.io/assignments/assignment02">Assignment 02</a><br />
 <a href="#">Assignment 03</a><br />
 <a href="#">Assignment 04</a><br />
 <a href="#">Assignment 05</a><br />
