--- a/assignments/assignment03.html
+++ b/assignments/assignment03.html
@@ -1,2 +1,2 @@
-<img src="https://i.imgur.com/ysdHv6M.jpeg" />
+<a href="https://i.imgur.com/ysdHv6M.jpeg">Golf Scorecard Wireframe</a>
 <a href="https://pokeygreencactus.github.io/golfScorecard.html">Golf Scorecard App</a>
