--- a/golfScorecard.html
+++ b/golfScorecard.html
@@ -6,6 +6,7 @@
     <th>Score</th>
     <th>Over</th>
     <th>Actions</th>
+	<th>Clear</th>
   </tr>
   <tr id="1">
     <td>1</td>
@@ -13,6 +14,7 @@
     <td>-</td>
     <td>-</td>
     <td><button class="btn btn-success">+</button> <button class="btn btn-danger">-</button></td>
+	<td><button class="btn btn-success">C</button></td>
   </tr>
   <tr id="2">
     <td>2</td>
@@ -20,6 +22,7 @@
     <td>-</td>
     <td>-</td>
     <td><button class="btn btn-success">+</button> <button class="btn btn-danger">-</button></td>
+	<td><button class="btn btn-success">C</button></td>
   </tr>
   <tr id="3">
     <td>3</td>
@@ -27,6 +30,7 @@
     <td>-</td>
     <td>-</td>
     <td><button class="btn btn-success">+</button> <button class="btn btn-danger">-</button></td>
+	<td><button class="btn btn-success">C</button></td>
   </tr>
   <tr id="4">
     <td>4</td>
@@ -34,6 +38,7 @@
     <td>-</td>
     <td>-</td>
     <td><button class="btn btn-success">+</button> <button class="btn btn-danger">-</button></td>
+	<td><button class="btn btn-success">C</button></td>
   </tr>
   <tr id="5">
     <td>5</td>
@@ -41,6 +46,7 @@
     <td>-</td>
     <td>-</td>
     <td><button class="btn btn-success">+</button> <button class="btn btn-danger">-</button></td>
+	<td><button class="btn btn-success">C</button></td>
   </tr>
   <tr id="6">
     <td>6</td>
@@ -48,6 +54,7 @@
     <td>-</td>
     <td>-</td>
     <td><button class="btn btn-success">+</button> <button class="btn btn-danger">-</button></td>
+	<td><button class="btn btn-success">C</button></td>
   </tr>
   <tr id="7">
     <td>7</td>
@@ -55,6 +62,7 @@
     <td>-</td>
     <td>-</td>
     <td><button class="btn btn-success">+</button> <button class="btn btn-danger">-</button></td>
+	<td><button class="btn btn-success">C</button></td>
   </tr>
   <tr id="8">
     <td>8</td>
@@ -62,6 +70,7 @@
     <td>-</td>
     <td>-</td>
     <td><button class="btn btn-success">+</button> <button class="btn btn-danger">-</button></td>
+	<td><button class="btn btn-success">C</button></td>
   </tr>
   <tr id="9">
     <td>9</td>
@@ -69,6 +78,7 @@
     <td>-</td>
     <td>-</td>
     <td><button class="btn btn-success">+</button> <button class="btn btn-danger">-</button></td>
+	<td><button class="btn btn-success">C</button></td>
   </tr>
   <tr id="10">
     <td>10</td>
@@ -76,6 +86,7 @@
     <td>-</td>
     <td>-</td>
     <td><button class="btn btn-success">+</button> <button class="btn btn-danger">-</button></td>
+	<td><button class="btn btn-success">C</button></td>
   </tr>
   <tr id="11">
     <td>11</td>
@@ -83,6 +94,7 @@
     <td>-</td>
     <td>-</td>
     <td><button class="btn btn-success">+</button> <button class="btn btn-danger">-</button></td>
+	<td><button class="btn btn-success">C</button></td>
   </tr>
   <tr id="12">
     <td>12</td>
@@ -90,6 +102,7 @@
     <td>-</td>
     <td>-</td>
     <td><button class="btn btn-success">+</button> <button class="btn btn-danger">-</button></td>
+	<td><button class="btn btn-success">C</button></td>
   </tr>
   <tr id="13">
     <td>13</td>
@@ -97,6 +110,7 @@
     <td>-</td>
     <td>-</td>
     <td><button class="btn btn-success">+</button> <button class="btn btn-danger">-</button></td>
+	<td><button class="btn btn-success">C</button></td>
   </tr>
   <tr id="14">
     <td>14</td>
@@ -104,6 +118,7 @@
     <td>-</td>
     <td>-</td>
     <td><button class="btn btn-success">+</button> <button class="btn btn-danger">-</button></td>
+	<td><button class="btn btn-success">C</button></td>
   </tr>
   <tr id="15">
     <td>15</td>
@@ -111,6 +126,7 @@
     <td>-</td>
     <td>-</td>
     <td><button class="btn btn-success">+</button> <button class="btn btn-danger">-</button></td>
+	<td><button class="btn btn-success">C</button></td>
   </tr>
   <tr id="16">
     <td>16</td>
@@ -118,6 +134,7 @@
     <td>-</td>
     <td>-</td>
     <td><button class="btn btn-success">+</button> <button class="btn btn-danger">-</button></td>
+	<td><button class="btn btn-success">C</button></td>
   </tr>
   <tr id="17">
     <td>17</td>
@@ -125,6 +142,7 @@
     <td>-</td>
     <td>-</td>
     <td><button class="btn btn-success">+</button> <button class="btn btn-danger">-</button></td>
+	<td><button class="btn btn-success">C</button></td>
   </tr>
   <tr id="18">
     <td>18</td>
@@ -132,6 +150,7 @@
     <td>-</td>
     <td>-</td>
     <td><button class="btn btn-success">+</button> <button class="btn btn-danger">-</button></td>
+	<td><button class="btn btn-success">C</button></td>
   </tr>
   <tr id="totals">
     <td id="allTotal">TOTALS</td>
