--- a/golfScorecard.html
+++ b/golfScorecard.html
@@ -1,5 +1,10 @@
+<!DOCTYPE html>
+<html>
+	<head>
+		<link rel="stylesheet" href="golfScorecard.css" />
+	</head>
+<body>
 <h1>Golf Scorecard</h1>
-<link rel="stylesheet" href="golfScorecard.css" />
 <table class="table table-striped">
   <tr id="0">
     <th>Hole</th>
@@ -162,3 +167,5 @@
   </tr>
 </table>
  <script src="golfScorecard.js"></script> 
+	</body>
+</html>
