--- a/golfScorecard.html
+++ b/golfScorecard.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" href="golfScorecard.css" />
+		<link rel="stylesheet" href="pokeygreencactus.github.io/golfScorecard.css" />
 	</head>
 <body>
 <h1>Golf Scorecard</h1>
