--- a/golfScorecard.html
+++ b/golfScorecard.html
@@ -1,8 +1,8 @@
-//Assignment03 - create a dynamic golfScorecard app
+<!--Assignment03 - create a dynamic golfScorecard app
 //Author: Adam Cossin
 //Contact: racossin@svsu.edu
 //Date: 10/18/2021
-//Program allows users to interact with a golfScorecard app where they can dynamically change their score
+//Program allows users to interact with a golfScorecard app where they can dynamically change their score-->
 <!DOCTYPE html>
 <html>
 	<head>
