--- a/golfScorecard.html
+++ b/golfScorecard.html
@@ -2,7 +2,7 @@
 //Author: Adam Cossin
 //Contact: racossin@svsu.edu
 //Date: 10/18/2021
-//Program allows users to interact with a golfScorecard app where they can dynamically change their score-->
+//Table for golfScorecard app with buttons-->
 <!DOCTYPE html>
 <html>
 	<head>
