--- a/assignments/assignment04.html
+++ b/assignments/assignment04.html
@@ -1,2 +1,3 @@
-
-placeholder
+<a href="https://pokeygreencactus.github.io/clubDistancesList.html">Club Distances List</a>
+<p></p>
+<a href="https://pokeygreencactus.github.io/">Link 2</a>
