--- a/assignments/assignment04.html
+++ b/assignments/assignment04.html
@@ -1,3 +1,3 @@
-<a href="https://pokeygreencactus.github.io/clubDistanceList.html">Link 1</a>
+<a href="https://pokeygreencactus.github.io/clubMeNow/clubDistanceList.html">Link 1</a>
 <p></p>
 <a href="https://pokeygreencactus.github.io/">Link 2</a>
