--- a/assignments/assignment03.html
+++ b/assignments/assignment03.html
@@ -1,3 +1,3 @@
 <a href="https://i.imgur.com/ysdHv6M.jpeg">Golf Scorecard Wireframe</a>
 <p></p>
-<a href="https://pokeygreencactus.github.io/golfScorecard.html">Golf Scorecard App</a>
+<a href="https://pokeygreencactus.github.io/golfScorecard/golfScorecard.html">Golf Scorecard App</a>
