--- a/clubMeNow/clubAbout.html
+++ b/clubMeNow/clubAbout.html
@@ -1,2 +1,6 @@
+<!--Author: Adam Cossin
+Assignment 04
+Displays the 'ClubMeNow' version
+Displays a button 'Back' and when clicked, navigates back to the 'clubDistanceList.html' page -->
 <p>ClubMeNow version 1.0.0</p>
 <button type ="button" onclick="window.location.href='clubDistanceList.html'">Back</button>
